# fraud_sentinel

./: .gitignore  Dockerfile  README.md  pyproject.toml
artifacts/: anomaly_leaderboard.csv  class_distribution.csv  correlation_summary.csv  drift_report.csv  error_analysis.csv  feature_importance.csv  leaderboard.csv  metrics.json  model_bundle.joblib  strategy_comparison.csv  tuning_results.csv
examples/: sample_transactions.csv  sample_transactions_with_labels.csv
src/fraud_sentinel/: __init__.py  api.py  cli.py  config.py  dashboard.py  data.py  evaluation.py  features.py  inference.py  models.py  pipeline.py  reporting.py  tuning.py
tests/: conftest.py  test_api.py  test_features.py  test_models_and_tuning.py  test_pipeline.py
